--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "devDependencies": {
-    "@textlint/textlint-plugin-markdown": "^13.3.2",
-    "textlint": "^13.3.2",
-    "textlint-rule-preset-ja-spacing": "^2.3.0",
-    "textlint-rule-preset-ja-technical-writing": "^7.0.0"
+  "dependencies": {
+    "@textlint/textlint-plugin-markdown": "^14.0.4",
+    "prettier": "^3.2.5",
+    "textlint": "^14.0.4",
+    "textlint-rule-preset-ja-spacing": "^2.3.1",
+    "textlint-rule-preset-ja-technical-writing": "^10.0.1"
   }
 }
