--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -1,7 +1,7 @@
 name: reviewdog
 on:
   pull_request:
-    branches: [ main ]
+    branches: [main]
 jobs:
   textlint:
     name: runner / textlint
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
       - name: Get npm cache directory
         id: npm-cache-dir
         shell: bash
