--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          java-version-file: '.tool-versions'
+          distribution: jetbrains
+          java-version-file: .tool-versions
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
