--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -28,7 +28,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: jetbrains
-          java-version-file: .tool-versions
+          java-version-file: .java-version
       
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
